"Fix Locale.of() to be compatible with Java 17"